--- a/source/catalog.html
+++ b/source/catalog.html
@@ -106,7 +106,7 @@
           <article class="catalog__item">
             <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 500" class="catalog__picture">
             <h2 class="catalog__name">Cat Energy Slim 500 г</h2>
-            <table class="catalog__table table">
+            <table class="catalog__table table-features">
               <tr>
                 <td class="table-features__cell-name">Объем</td>
                 <td class="table-features__cell-value">500 г</td>
@@ -126,7 +126,7 @@
           <article class="catalog__item">
             <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 1000" class="catalog__picture">
             <h2 class="catalog__name">Cat Energy Slim 1000 г</h2>
-            <table class="catalog__table table">
+            <table class="catalog__table table-features">
               <tr>
                 <td class="table-features__cell-name">Объем</td>
                 <td class="table-features__cell-value">1000 г</td>
@@ -146,7 +146,7 @@
           <article class="catalog__item">
             <img src="https://via.placeholder.com/100x100"  width="100" height="100" alt="Cat Energy Slim 500" class="catalog__picture">
             <h2 class="catalog__name">Cat Energy PRO 500 г</h2>
-            <table class="catalog__table table">
+            <table class="catalog__table table-features">
               <tr>
                 <td class="table-features__cell-name">Объем</td>
                 <td class="table-features__cell-value">500 г</td>
