--- a/source/index.html
+++ b/source/index.html
@@ -61,14 +61,14 @@
       <section class="example">
         <h2 class="example__header">Живой пример</h2>
         <p class="example__about">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <ul class="example__stat stat">
-          <li class="stat__element">5 кг</li>
-          <li class="stat__description">снижение веса</li>
-        </ul>
-        <ul class="example__stat stat">
-          <li class="stat__element">60 дней</li>
-          <li class="stat__description">затрачено времени</li>
-        </ul>
+        <dl class="example__stat stat">
+          <dt class="stat__element">5 кг</dt>
+          <dd class="stat__description">снижение веса</dd>
+        </dl>
+        <dl class="example__stat stat">
+          <dt class="stat__element">60 дней</dt>
+          <dd class="stat__description">затрачено времени</dd>
+        </dl>
         <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
         <img src="https://via.placeholder.com/311x232"  width="311" height="232" alt="cat before" class="example__picture">
         <p class="example__checkbox-text">Было</p>
