--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@
         <a class="nav__logo-link">
           <img src="https://via.placeholder.com/191x39"  width="191" height="39" alt="Cat Energy" class="logo">
         </a>
-        <button class="nav__toggle" type="button">Открыть меню</button>
+        <button class="nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="nav__list">
           <li class="nav__item nav__item--active"><a>Главная</a></li>
           <li class="nav__item"><a href="catalog.html">Каталог продукции</a></li>
